Java assignment - feature clean code